--- a/main.html
+++ b/main.html
@@ -7,6 +7,29 @@
 </head>
 
 <body>
+<h1>Feedback From</h1>
+	<form method="get">
+		 <div>
+            <label for="name">Name</label>
+            <input type="text" id="name" min="3" max="50" required>
+        </div>
+      
+		 <div>
+            <label for="portfolio">Portfolio</label>
+            <input type="url" name="portfolio" id="portfolio" required>
+        </div>
+		 <div>
+            <label for="FavColor">Favcolor</label>
+            <input type="color" id="FavColor" >
+        </div>
+      
+		 <div>
+            <label for="likeness">Likeness</label>
+            <input type="range" name="email" id="likeness" min="1" max="100">
+        </div>
+		<input type="submit" value="submit">
+		
+	</form>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
