--- a/main.html
+++ b/main.html
@@ -25,7 +25,7 @@
       
 		 <div>
             <label for="likeness">Likeness</label>
-            <input type="range" name="email" id="likeness" min="1" max="100">
+            <input type="range" name="likeness" id="likeness" min="1" max="100">
         </div>
 		<input type="submit" value="submit">
 		
