--- a/main.html
+++ b/main.html
@@ -8,10 +8,10 @@
 
 <body>
 <h1>Feedback From</h1>
-	<form method="get">
+	<form method="post">
 		 <div>
             <label for="name">Name</label>
-            <input type="text" id="name" min="3" max="50" required>
+            <input type="text" id="name" minlength="3" maxlength="50" required>
         </div>
       
 		 <div>
