--- a/main.html
+++ b/main.html
@@ -19,7 +19,7 @@
             <input type="url" name="portfolio" id="portfolio" required>
         </div>
 		 <div>
-            <label for="FavColor">Favcolor</label>
+            <label for="FavColor">FavColor</label>
             <input type="color" id="FavColor" >
         </div>
       
