--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
 	<form method="post">
 		 <div>
             <label for="name">Name</label>
-            <input type="textarea" id="name" minlength="3" maxlength="50" required>
+            <input type="text" id="name" minlength="3" maxlength="50" required>
         </div>
       
 		 <div>
