--- a/main.html
+++ b/main.html
@@ -10,6 +10,7 @@
 <h1>Feedback From</h1>
 	<form method="post">
 		 <div>
+			 <h1>Feedback Form</h1>
             <label for="name">Name</label>
             <input type="text" id="name" minlength="3" maxlength="50" required>
         </div>
