--- a/main.html
+++ b/main.html
@@ -20,8 +20,8 @@
             <input type="url" name="portfolio" id="portfolio" required>
         </div>
 		 <div>
-            <label for="FavColor">FavColor</label>
-            <input type="color" id="FavColor" >
+            <label for="favColor">FavColor</label>
+            <input type="color" id="favColor" >
         </div>
       
 		 <div>
